--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <body>
 
-<h2>Hungry? Look for the nearest place to fill yout tummy!</h2>
+<h2>Hungry? Look for the nearest place to fill your tummy!</h2>
 
 
 <div class="navbar">
