--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="style.css" rel="stylesheet" type="text/css" />
 <body>
+  <button onclick="myFunction()">Toggle dark mode</button>
+  
+  <script>
+    function myFunction() {
+       var element = document.body;
+       element.classList.toggle("dark-mode");
+    }
+    </script> 
 
 <h2>Hungry? Look for the nearest place to fill your tummy!</h2>
 
