--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="style.css" rel="stylesheet" type="text/css" />
 <body>
-  <button onclick="myFunction()">Toggle dark mode</button>
-  
+
+
+  <input type= "button" class= "button" value= "Dark Mode"button onclick="myFunction()"></button>
+
   <script>
     function myFunction() {
        var element = document.body;
